2008-04-07  Timothy Hatcher  <timothy@apple.com>

        Fixes coding style for two utility getters.

        * page/inspector/utilities.js: Fix coding style for the
        totalOffsetLeft and totalOffsetTop getters.

2008-04-07  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=18311
          <rdar://problem/5842980> REGRESSION (r31620): Font variants (e.g. Helvetica Neue *Light*) don't render correctly

        * platform/mac/WebFontCache.mm:
        (+[WebFontCache internalFontWithFamily:traits:weight:size:]): Changed to
        match by family name first, and only if that fails, look for a match by
        full (PostScript) name. Reverted the full name-based match logic to only
        distinguish between the broad categories of "bold" and "not bold".

2008-04-07  Timothy Hatcher  <timothy@apple.com>

        When the WebInspector.currentFocusElement changes, move the caret
        selection to be inside the focused element. This makes sure the
        caret moves in and out of the console when the focus changes.

        Reviewed by Adam Roben.

        * page/inspector/TextPrompt.js:
        (TextPrompt.prototype.isCaretInsidePrompt): Just call isInsertionCaretInside.
        * page/inspector/inspector.js: 
        (WebInspector.set currentFocusElement): Make a caret selection inside
        the focused element if there isn't a range selection and there isn't
        already a caret selection inside.
        * page/inspector/utilities.js:
        (Element.prototype.isInsertionCaretInside): Added. Tests if the
        selection is collapsed and is inside the element.

2008-04-07  Brady Eidson  <beidson@apple.com>

        Reviewed by Tim Hatcher

        Add 1 more empty file for upcoming work, as a separate step, to keep all build-systems working

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj: